kubernetes/apps/default/wallos/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallos
  annotations:
    gethomepage.dev/description: "Subscription tracker"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "wallos"
    gethomepage.dev/name: "Wallos"
spec:
  hostnames:
    - "wallos.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: wallos
          port: 80
